2003-03-13    <johan@balder>

	Hackup const and volatile modifiers in type chains a bit:
	* src/SDCC.y:1.63
	* src/SDCCast.c:1.169
	* src/SDCCglue.c:1.136
	* src/SDCCicode.c:1.143
	* src/SDCCsymt.c1.146
	* src/SDCCsymt.h1.59
	* src/SDCCval.c:1.63

2003-03-12    <johan@balder>

	* src/SDCCBBlock.h: more LRH debugging junk
	* src/SDCCcflow.h: more LRH debugging junk
	* src/SDCCloop.c: more LRH debugging junk
	* src/SDCC.y (struct_declaration): fixed bug #697590
	* src/SDCCsymt.[hc] (cloneSpec): NEVER EVER use this again
	* src/ds390/gen.c (aopForRemat): fixed bug #700031
	* src/SDCCglue.c (emitStaticSeg): fixed bug #700797

2003-03-11 Kevin Vigor <kevin@vigor.nu>
	* src/SDCCpeeph.c: quit being lazy and made proper fix (peephole
	test function names must now match exactly).
	* src/SDCCcse.c: added special case in findCheaperOp to allow
	extending a short integer. Makes less awful code for bug 700121 test case.

2003-03-11  Jesus Calvino-Fraga <jesusc@ece.ubc.ca>

	* as/mcs51/lkmain.c: Added ASlink-Warning to messages 
	* as/mcs51/lkaomf51.c: Fixed bug when linking asmblink example

2003-03-11 Kevin Vigor <kevin@vigor.nu>

	* src/SDCCpeeph.c: fix so that operandsNotEqualX functions are
	actually called (operandsNotEqual() was called for all 
	operandsNotEqualX tests).

2003-03-11 Kevin Vigor <kevin@vigor.nu>

	* src/SDCCcse.c: fix findCheaperOp to prevent replacing int types
	with shorter literals. Fixes bug 700121.

2003-03-11    <johan@balder>

	* src/SDCCsymt.c (compareType): a (void *) can be assigned to any pointer

2003-03-11  Bernhard Held <bernhard@bernhardheld.de>

        * src/SDCCloop.c (mergeRegions): an evil beast is dead
	* src/SDCCmain.c (preProcess): minor cleanup: eliminate preOutName

2003-03-10  Borut Razem <borut.razem@siol.net>

	* src/SDCCmain.c: pipe preprocessor's output
	* support/Util/MySystem.c, support/Util/MySystem.h: added my_popen()
	* sdcc_vc_in.h: define pclose as _pclose for WIN32